--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -38,3 +38,6 @@
 @import 'components/feedback';
 
 /** Inclusion of styles for individual blocks and sections */
+.hidden{
+    overflow: hidden !important;
+}
