--- a/src/html/components/footer.html
+++ b/src/html/components/footer.html
@@ -20,7 +20,7 @@
           </ul>
         </nav>
       </div>
-      <div class="stroke">
+      <div class="stroke fs-2">
         Св
         <span>я</span>
         зат
