--- a/src/scss/components/portfolio.scss
+++ b/src/scss/components/portfolio.scss
@@ -1,13 +1,24 @@
 .portfolio {
-  padding: 200rem 0 120rem;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
 
-  &__container {}
+  &__container {
+    position: relative;
+  }
 
   &__header {
     margin: 0 0 -30rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    h2,
+    p {
+      position: relative;
+      z-index: 0;
+    }
   }
 
   &__title {
@@ -32,6 +43,13 @@
         animation: marquee1 10s infinite linear;
         white-space: nowrap;
         display: inline-flex;
+        mix-blend-mode: difference !important;
+        margin-top: 5px;
+
+        p {
+          position: relative;
+          z-index: 1;
+        }
       }
     }
 
@@ -72,10 +90,118 @@
   }
 
   &__list {
-    margin-bottom: -100rem;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+
+    .wrap {
+      display: flex;
+      width: 100%;
+      justify-content: space-between;
+      align-items: flex-end;
+      position: absolute;
+      left: 0;
+
+      .portfolio__list-col {
+        padding: 0;
+        margin: 0;
+      }
+    }
+
+    .wrap:nth-child(2) {
+      justify-content: flex-end;
+      gap: 40px;
+    }
+
+    .wrap:nth-child(1) {
+      .portfolio__list-col:nth-child(1) {
+        padding-left: 40px;
+      }
+    }
+
+    .wrap:nth-child(3) {
+      .portfolio__list-col:nth-child(1) {
+        padding-left: 40px;
+      }
+
+      .portfolio__list-col:nth-child(2) {}
+    }
+
+    .wrap {
+      .portfolio__list-col {
+        .case-card__media {
+          position: relative;
+          background: transparent;
+          .grid-portfolio {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 2;
+            display: flex;
+          }
+
+
+          .grid-canvas {
+            position: relative;
+            width: 100%;
+            height: 100%;
+          }
+
+          .btn__rotate {
+            width: 80px;
+            height: 80px;
+            background: #442CBF;
+            border-radius: 50%;
+            position: absolute;
+            top: -40px;
+            right: 40px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            z-index: 5;
+
+            .icon {
+              width: 36px;
+              height: 36px;
+            }
+
+            .text {
+              width: 120px;
+              height: 120px;
+              position: absolute;
+              transform-origin: center;
+              animation: rotate 10s linear infinite;
+              will-change: transform;
+              mix-blend-mode: difference;
+              fill: #fff;
+            }
+
+            @keyframes rotate {
+              from {
+                transform: rotate(0deg);
+              }
+
+              to {
+                transform: rotate(-360deg);
+              }
+            }
+          }
+        }
+      }
+    }
+
     &-col {
       margin-bottom: 100rem;
       align-self: flex-end;
+
+      picture {
+        position: relative;
+        z-index: 1;
+      }
 
       &:nth-child(2n + 0) {
         margin-left: calc(2 * var(--col-width));
