--- a/src/scss/components/services.scss
+++ b/src/scss/components/services.scss
@@ -14,7 +14,6 @@
 
 .services {
   padding: 0 0 200rem;
-
   &__title {
     margin: 0 0 36rem;
   }
@@ -25,7 +24,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-
     svg {
       width: 760px;
       height: 760px;
@@ -63,7 +61,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-
+      width: 100%;
       h3 {
         font-family: "Onest";
         font-weight: 570;
@@ -75,7 +73,7 @@
         display: none;
         transition: opacity 0.3s ease;
         text-align: center;
-
+        white-space: nowrap;
         span {
           font-family: "Chava";
           font-weight: 400;
